k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: microservices.test
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
          - path: /storages
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8080
